# Jet

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Projects/: CMakeLists.txt  README.md
Projects/Compiler/: CMakeLists.txt
Projects/Compiler/Private/: Compile.cpp  Settings.cpp
Projects/Compiler/Public/: Compile.ixx  Settings.ixx
Projects/CompilerApp/: CMakeLists.txt
Projects/CompilerApp/Private/: Main.cpp
Projects/Components/: CMakeLists.txt
Projects/Components/Format/: CMakeLists.txt
Projects/Components/Format/Public/: Format.ixx
Projects/Components/Foundation/: CMakeLists.txt
Projects/Components/Foundation/Private/: ProgramArgs.cpp
Projects/Components/Foundation/Private/Encoding/: UTF8.cpp
Projects/Components/Foundation/Public/: Foundation.ixx  ProgramArgs.cppm  ProgramArgs.ixx  Result.ixx  StdTypes.cppm  StdTypes.ixx
Projects/Components/Foundation/Public/Encoding/: UTF8.ixx
Projects/Components/Log/: CMakeLists.txt
Projects/Components/Log/Private/: Log.cpp
Projects/Components/Log/Public/: Log.cppm
Projects/Components/PEG/: CMakeLists.txt  README.md
Projects/Components/PEG/Private/: Analysis.cpp  Analysis.impl.cpp  Analysis.impl.cppm  Grammar.cpp  Grammar.impl.cppm  PEG.cpp  PEG.impl.cppm
Projects/Components/PEG/Private/Grammar/: GrammarBuilder.cpp  GrammarBuilder.impl.cpp  Rule.cpp
Projects/Components/PEG/Public/: Analysis.ixx  Grammar.cppm  Grammar.ixx  PEG.ixx
Projects/Components/PEG/Public/Grammar/: GrammarBuilder.ixx  Rule.ixx
Projects/Components/YAML/: CMakeLists.txt
Projects/Components/YAML/Public/: YAML.cppm
Projects/Core/: CMakeLists.txt
Projects/Core/Private/File/: File.cpp  File.impl.cppm
Projects/Core/Private/Module/: Module.cpp
Projects/Core/Private/Program/: ProgramArgs.cpp
Projects/Core/Public/: Core.ixx  Result.ixx  StdTypes.ixx
Projects/Core/Public/File/: File.ixx
Projects/Core/Public/Module/: Module.ixx
Projects/Core/Public/Program/: ProgramArgs.ixx
Projects/Jetpack/: CMakeLists.txt
Projects/Jetpack/Private/: Main.cpp
Projects/Jetpack/Private/Program/: App.impl.cpp  App.ixx  RunConfig.cpp  RunConfig.ixx
Projects/PEG/: CMakeLists.txt
Projects/PEG/Private/: PEG.cpp
Projects/PEG/Public/: Grammar.ixx  PEG.ixx
Projects/Parser/: CMakeLists.txt
Projects/Parser/Private/: JetGrammar.cpp  JetGrammar.impl.cpp  JetGrammar.impl.cppm  ModuleParse.cpp  Parser.cpp  Parser.impl.cppm
Projects/Parser/Public/: JetGrammar.ixx  ModuleParse.ixx  Parser.ixx
Projects/Test/: CMakeLists.txt
Projects/Test/Private/: Common.hpp  Main.cpp  Parser.Test.cpp
Projects/Test/cases/: EmptyMain.jet  HelloWorld.jet
Projects/Test/cases/control_flow/: for_loop.jet  if_else.jet  if_else_if_else.jet  simple_loop.jet  single_if.jet  while_loop.jet
Projects/Test/cases/expressions/: AddNumbers.jet  AddVariables.jet  CompoundExpr.jet  CompoundMathExpr.jet  MultipleExpressions.jet
Projects/Test/cases/functions/: EmptyFunctionCall.jet  Function-ExplicitType.jet  Function-WithParams-ExplicitType-WithReturn.jet  Function-WithParams-ExplicitType.jet  Function-WithParams.jet  Function-WithReturn.jet  FunctionInFunction.jet
Projects/Test/cases/modules/: Combined-Use.jet  Multiple-Combined-Use.jet  Simple-Use.jet  Submodule-Empty.jet  Submodule-WithFunction-WithGlobalAlias.jet  Submodule-WithFunction-WithGlobalUse.jet  Submodule-WithFunction-WithLocalAlias.jet  Submodule-WithFunction-WithLocalUse.jet  Submodule-WithFunction.jet  Use-Aliases.jet
Projects/Test/cases/types/: EmptyStruct.jet  Vector2-Simple.jet  Vector2.jet
Projects/Test/cases/variables/: SingleVariable-f32.jet  SingleVariable-i32.jet
docs/: README.md
docs/design/: Functions.md  README.md  Variables.md
docs/examples/: Fib.jet  Fib.jt  GuessANumber.jet  HelloWorld.jet  README.md
docs/tutorial/: README.md
